--- a/skin.html
+++ b/skin.html
@@ -37,7 +37,7 @@ src:url(./images/NanumGothic.eot);
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ko_KR/all.js#xfbml=1&appId=118021874916563";
+  js.src = "//connect.facebook.net/ko_KR/all.js#xfbml=1&appId=YOUR_appID";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <s_t3>
@@ -70,7 +70,7 @@ src:url(./images/NanumGothic.eot);
            <a href="http://spidersweb.tistory.com/entry/Katie-Melua-Spiders-Web"><img src="./images/slide1.jpg" alt="slide image" width="980" height="270" /></a>
       </div>
 	
-      <div><p class="slides-text">Spider's Web 스킨은 HTML5와 CSS3로 마크업 되어 있습니다. 익스플로러6는 지원하지 않습니다. 이 스킨은 개인에게 배포하는 것으로 익스플로러6 사용을 멈추는 것에 동참해주시기 바랍니다. 모던브라우저 <a href="http://www.mozilla.or.kr/ko/firefox/">파이어폭스</a>, <a href="https://www.google.com/chrome?hl=ko">크롬</a>, <a href="http://www.opera.com/">오페라</a> 등으로 쾌적한 인터넷을 즐겨보세요.<br /><br />Spider's Web의 디자인은 텍스트큐브와 티스토리의 기본 모듈을 모두 포함하지 않습니다. 반드시 필요한 카테고리(네비게이션), 최근 글 목록, 최근 댓글 목록, 최근 트랙벡 목록 모듈만 사용합니다. 추가적인 모듈 코딩 및 디자인은 셀프입니다.<br /><br />문의, 버그리포트, 제안 등은 <a href="http://facebook.com/minordev">페이스북</a>으로 연락 부탁드립니다. Github에 가입 후 이슈를 남겨주셔도 좋습니다. 블로그 댓글은 확인하지 않습니다. 또한 시간 관계로 더이상 업데이트가 불가능할 때는 답변을 못드리니 양해 바랍니다. <br /><br /><img src="./images/modern.png" alt="modern image" style="float:right;" width="150" height="145" /></p> 
+      <div><p class="slides-text">Spider's Web 스킨은 HTML5와 CSS3로 마크업 되어 있습니다. 익스플로러6, 7, 8은 지원하지 않습니다. 이 스킨은 개인에게 배포하는 것으로 익스플로러6 사용을 멈추는 것에 동참해주시기 바랍니다. 모던브라우저 <a href="http://www.mozilla.or.kr/ko/firefox/">파이어폭스</a>, <a href="https://www.google.com/chrome?hl=ko">크롬</a>, <a href="http://www.opera.com/">오페라</a> 등으로 쾌적한 인터넷을 즐겨보세요.<br /><br />Spider's Web의 디자인은 텍스트큐브와 티스토리의 기본 모듈을 모두 포함하지 않습니다. 반드시 필요한 카테고리(네비게이션), 최근 글 목록, 최근 댓글 목록, 최근 트랙벡 목록 모듈만 사용합니다. 추가적인 모듈 코딩 및 디자인은 셀프입니다.<br /><br />문의, 버그리포트, 제안 등은 <a href="http://facebook.com/minordev">페이스북</a>으로 연락 부탁드립니다. Github에 가입 후 이슈를 남겨주셔도 좋습니다. 블로그 댓글은 확인하지 않습니다. 또한 시간 관계로 더이상 업데이트가 불가능할 때는 답변을 못드리니 양해 바랍니다. <br /><br /><img src="http://ts.daumcdn.net/custom/blog/79/798356/skin/images/modern.png" alt="modern image" style="float:right;" width="150" height="145" /></p> 
 
       </div>
 
