email 링크에 title 속성추가

--- a/skin.html
+++ b/skin.html
@@ -56,7 +56,7 @@ src:url(./images/NanumGothic.eot);
              <li id="flickr-link"><a title="[http://flickr.com]으로 이동합니다."  href="http://www.flickr.com/">flickr</a></li>
              <li id="youtube-link"><a title="[http://youtube.com]으로 이동합니다."  href="http://www.youtube.com/">youtube</a></li>
              <li id="github-link"><a title="mnordev의 [http://github.com]으로 이동합니다."  href="https://github.com/minordev">Github</a></li>
-             <li id="email-link"><a href="mailto:minordev@facebook.com">Email</a></li>
+             <li id="email-link"><a title="이메일 보내기 링크입니다. " href="mailto:minordev@facebook.com">Email</a></li>
              <li id="rss-link"><a title="RSS로 이동합니다." href="[##_blog_link_##]rss">RSS</a></li>
            </ul>
       </div>
