#snslink css 수정

--- a/skin.html
+++ b/skin.html
@@ -49,7 +49,8 @@ src:url(./images/NanumGothic.eot);
      <h1 class="blog-title"><a title="홈으로 이동합니다." href="[##_blog_link_##]">[##_title_##]</a></h1>
    </hgroup>
    
-      <div id="link-box">
+      <div id="linkbox">
+	    <div id="linkbox-inner">	  
 	      <ul id="snslink">
 	         <li id="facebook-link"><a title="minordev의 [http://facebook.com]으로 이동합니다." href="http://facebook.com/minordev">facebook</a></li>
              <li id="twitter-link"><a title="[http://twitter.com]으로 이동합니다." href="http://twitter.com/">twitter</a></li>
@@ -60,6 +61,7 @@ src:url(./images/NanumGothic.eot);
              <li id="email-link"><a title="이메일 보내기 링크입니다. " href="mailto:minordev@facebook.com">Email</a></li>
              <li id="rss-link"><a title="RSS로 이동합니다." href="[##_blog_link_##]rss">RSS</a></li>
            </ul>
+		  </div>
       </div>
 
  </div>
