--- a/skin.html
+++ b/skin.html
@@ -52,7 +52,7 @@ src:url(./images/NanumGothic.eot);
       <div id="linkbox">
 	    <div id="linkbox-inner">	  
 	      <ul id="snslink">
-	         <li id="facebook-link"><a title="minordev의 [http://facebook.com]으로 이동합니다." href="http://facebook.com/minordev">facebook</a></li>
+	         <li id="facebook-link"><a title="[http://facebook.com]으로 이동합니다." href="http://facebook.com/spidersweb.html5">facebook</a></li>
              <li id="twitter-link"><a title="[http://twitter.com]으로 이동합니다." href="http://twitter.com/">twitter</a></li>
 		     <li id="google-link"><a title="[http://plus.google.org]로 이동합니다."  href="https://plus.google.com/">google plus</a></li>
              <li id="flickr-link"><a title="[http://flickr.com]으로 이동합니다."  href="http://www.flickr.com/">flickr</a></li>
@@ -73,7 +73,7 @@ src:url(./images/NanumGothic.eot);
            <a title="Spider's Web 뮤직비디오 포스팅으로 이동합니다." href="http://spidersweb.tistory.com/entry/Katie-Melua-Spiders-Web"><img src="./images/slide1.jpg" alt="slide image" width="980" height="270" /></a>
       </div>
 	
-      <div><p class="slides-text">Spider's Web 스킨은 HTML5와 CSS3로 마크업 되어 있습니다. 익스플로러6는 지원하지 않습니다. 이 스킨은 개인에게 배포하는 것으로 익스플로러6 사용을 멈추는 것에 동참해주시기 바랍니다. 모던브라우저 <a  title="[http://mozilla.or.kr/firefox]로 이동합니다." href="http://www.mozilla.or.kr/ko/firefox/">파이어폭스</a>, <a title="[http://google.com/chrome?hl=ko]로 이동합니다."  href="https://www.google.com/chrome?hl=ko">크롬</a>, <a  title="[http://opera.com]으로 이동합니다." href="http://www.opera.com/">오페라</a> 등으로 쾌적한 인터넷을 즐겨보세요.<br /><br />Spider's Web의 디자인은 텍스트큐브와 티스토리의 기본 모듈을 모두 포함하지 않습니다. 반드시 필요한 카테고리(네비게이션), 최근 글 목록, 최근 댓글 목록, 최근 트랙벡 목록 모듈만 사용합니다. 추가적인 모듈 코딩 및 디자인은 셀프입니다.<br /><br />문의, 버그리포트, 제안 등은 <a title="[http://facebook.com]으로 이동합니다."  href="http://facebook.com/minordev">페이스북</a>으로 연락 부탁드립니다. <a title="[http://github.com]으로 이동합니다."  href="http://github.com/minordev">Github</a>에 가입 후 이슈를 남겨주셔도 좋습니다. 블로그 댓글은 확인하지 않습니다. 또한 시간 관계로 더이상 업데이트가 불가능할 때는 답변을 못드리니 양해 바랍니다. <br /><br /><img src="./images/modern.png" alt="modern image" style="float:right;" width="150" height="145" /></p> 
+      <div><p class="slides-text">Spider's Web 스킨은 HTML5와 CSS3로 마크업 되어 있습니다. 익스플로러6는 지원하지 않습니다. 이 스킨은 개인에게 배포하는 것으로 익스플로러6 사용을 멈추는 것에 동참해주시기 바랍니다. 모던브라우저 <a  title="[http://mozilla.or.kr/firefox]로 이동합니다." href="http://www.mozilla.or.kr/ko/firefox/">파이어폭스</a>, <a title="[http://google.com/chrome?hl=ko]로 이동합니다."  href="https://www.google.com/chrome?hl=ko">크롬</a>, <a  title="[http://opera.com]으로 이동합니다." href="http://www.opera.com/">오페라</a> 등으로 쾌적한 인터넷을 즐겨보세요.<br /><br />Spider's Web의 디자인은 텍스트큐브와 티스토리의 기본 모듈을 모두 포함하지 않습니다. 반드시 필요한 카테고리(네비게이션), 최근 글 목록, 최근 댓글 목록, 최근 트랙벡 목록 모듈만 사용합니다. 추가적인 모듈 코딩 및 디자인은 셀프입니다.<br /><br />문의, 버그리포트, 제안 등은 <a title="[http://facebook.com]으로 이동합니다."  href="http://facebook.com/spidersweb.html5">페이스북</a>으로 연락 부탁드립니다. <a title="[http://github.com]으로 이동합니다."  href="http://github.com/minordev">Github</a>에 가입 후 이슈를 남겨주셔도 좋습니다. 블로그 댓글은 확인하지 않습니다. 또한 시간 관계로 더이상 업데이트가 불가능할 때는 답변을 못드리니 양해 바랍니다. <br /><br /><img src="./images/modern.png" alt="modern image" style="float:right;" width="150" height="145" /></p> 
 
       </div>
 
@@ -532,7 +532,7 @@ src:url(./images/NanumGothic.eot);
                      <li><a title="관리자 페이지로 이동합니다." href="[##_owner_url_##]">admin</a> | </li>
                      <li><a title="글쓰기 페이지로 이동합니다." href="[##_owner_url_##]/entry/post">write</a> | </li>
                      <li>Powered by <a title="티스토리 홈으로 이동합니다." href="http://tistory.com">[##_tattertools_name_##]</a> | </li> 
-                     <li>design by <a title="minordev의 페이스북으로 이동합니다." href="http://facebook.com/minordev">minordev</a> | </li>
+                     <li>design by <a title="minordev의 페이스북으로 이동합니다." href="http://facebook.com/spidersweb.html5">minordev</a> | </li>
                      <li><a title="HTML5 유효성검사 페이지로 이동합니다." href="http://validator.w3.org/check?uri=referer">HTML5</a> | </li>
                      <li><a title="CSS3 유효성검사 페이지로 이동합니다." href="http://jigsaw.w3.org/css-validator/check/referer">CSS3</a> | </li>
                      <li>Total : [##_count_total_##] Today : [##_count_today_##] Yesterday : [##_count_yesterday_##]</li>
