--- a/skin.html
+++ b/skin.html
@@ -281,7 +281,7 @@ src:url(./images/NanumGothic.eot);
 
              <section>
              <div class="actionTrail">
-                 <a href="#tb" onclick="[##_article_rep_tb_link_##]"> Tracback <span class="cnt"> [##_article_rep_tb_cnt_##]</span></a> : <a href="#rp" onclick="[##_article_rep_rp_link_##]"> Comment <span class="cnt">[##_article_rep_rp_cnt_##]</span></a>
+                 <a href="#tb" onclick="[##_article_rep_tb_link_##]"> Trackback <span class="cnt"> [##_article_rep_tb_cnt_##]</span></a> : <a href="#rp" onclick="[##_article_rep_rp_link_##]"> Comment <span class="cnt">[##_article_rep_rp_cnt_##]</span></a>
                      <s_tag_label>
                          <span class="tag">Tags &raquo; [##_tag_label_rep_##]</span>
                      </s_tag_label>
